--- a/appsec.yml
+++ b/appsec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: /index.html
+  - source: /var/lib/jenkins/workspace/testapp/dist/appone
     destination: /var/www/html/
 hooks:
   BeforeInstall:
